# launch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-launch_medley-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/: CMakeCache.txt.prev
build-launch_medley-Desktop_Qt_6_4_2_MSVC2019_ARM64-Debug/: CMakeCache.txt  qtcsettings.cmake
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-95d278ea5a8917af1015.json  cmakeFiles-v1-bd20e2b09d883a311b4e.json  codemodel-v2-4f8fdef9c674f3f39e67.json  directory-.-Debug-de3779c1c1e760efadc6.json  index-2023-03-25T19-33-00-0046.json  target-launch_medley-Debug-84291a11bb52b9587a33.json  target-launch_medley_autogen_timestamp_deps-Debug-510700be53884a8b08d8.json
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-829ea1116bbd7859843b.json  directory-.-Debug-19701d41ed77a3c558bf.json  index-2023-03-24T03-58-15-0874.json  target-launch_medley-Debug-0d3d0140177b507b5b27.json  target-launch_medley_autogen-Debug-3de70f6d57b2fc7bedf6.json
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QChar.628FE204858D3DA8.idx  appdata.cpp.68CF9BADDBE969A0.idx  appdata.h.2E0363A847424518.idx  (+11 more)
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/launch_medley_autogen/: deps
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/launch_medley_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-launch_medley-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/launch_medley_autogen/include/: ui_mainwindow.h
launch_medley/: CMakeLists.txt  apps.cpp  apps.h  config.cpp  config.h  configfile.cpp  configfile.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: apps.cpp  apps.h  config.cpp  config.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  medleyapp.cpp  medleyapp.h  runmedley.cpp  runmedley.h  runner.cpp  runner.h  runner_docker.cpp  runner_docker.h  runner_lde.cpp  runner_lde.h
